--- a/practice-css/style.css
+++ b/practice-css/style.css
@@ -20,8 +20,9 @@ h2 {
   font-size: 3.2em;
 }
 
-pli {
+p,li {
   font-size: 1.7em;
+  font-weight: bold;
 }
 
 /*+++ more specific section styles +++*/
@@ -55,5 +56,5 @@ main p, main li {
 
 img {
   float: right;
-  margin: 1.2em 2em;
+  margin: 1.2em 1.5em;
 }
