--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
   html {
     font-family:"MS Pゴシック";
-    font-size: 10px;
+    font-size: 8px;
   }
   body {
     width: 100em;
@@ -12,17 +12,13 @@
   p {
     font-size: 1.7em;
   }
-  header {
+  h1.theme{
     background-color: rgb(253, 114, 0);
     height: 10em;
-    padding: 2em;
+    padding: 10em;
   }
   h1 {
 
     padding: 0.5em 0;
     margin: 0px;
-  }
-  img {
-    float: right;
-    margin: 1.2em 1.5em;
   }
