--- a/project.css
+++ b/project.css
@@ -8,10 +8,13 @@ html {
     padding: 0.2em;
     margin: 0em 0em 1em 0em;
   }
-  h1,h2,h3 {
+  h1 {
     font-size: 4em;
   }
-  p {
+  h2 {
+    font-size: 3em;
+  }
+  h3,p {
     font-size: 2em;
   }
   table{
