--- a/style.css
+++ b/style.css
@@ -7,8 +7,14 @@
     width: 100em;
     margin: 0 auto;
   }
-  h1,h2,h3 {
+  h1 {
     font-size: 4em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  h3 {
+    font-size: 2em;
   }
   p {
     font-size: 1.7em;
